--- a/src/pages/admin/discount-codes/edit/[id].astro
+++ b/src/pages/admin/discount-codes/edit/[id].astro
@@ -351,13 +351,15 @@ function formatDateForInput(date: Date | null): string {
               padding: 0.75rem 1rem;
               margin: 0.125rem 0;
               border-radius: 0.25rem;
+              transition: background-color 0.15s ease-in-out;
             }
             #product_ids option:checked {
               background-color: rgb(59 130 246);
               color: white;
             }
-            #product_ids option:hover {
-              background-color: rgb(243 244 246);
+            #product_ids option:hover:not(:checked) {
+              background-color: rgb(239 246 255);
+              color: rgb(37 99 235);
             }
           </style>
           <p class="mt-1 text-sm text-gray-500">
